mo dags no mo money

--- a/manuscripts/24-accepted-ehs/part-1-dags/s1-part-1-dags.qmd
+++ b/manuscripts/24-accepted-ehs/part-1-dags/s1-part-1-dags.qmd
@@ -101,7 +101,7 @@ $$
 K \coprod Y(k) | L
 $$
 
-According to the theory of causal inference under multiple versions of treatment, we may think of $K$ as a 'coarsened indicator' for $A$. Although the theory of causal inference under multiple versions of treatment provides a formal solution to the problem of treatment-effect heterogeneity and treatment-effect dependencies (also known as SUTVA - the 'stable unit treatment value assumption', refer to @rubin1980randomization), computing and interpreting causal effect estimates under this theory can be challenging.
+According to the theory of causal inference under multiple versions of treatment, we may think of $K$ as a 'coarsened indicator' for $A$. Although the theory of causal inference under multiple versions of treatment provides a formal solution to the problems of treatment-effect heterogeneity and treatment-effect dependencies (also known as SUTVA—the 'stable unit treatment value assumption'; refer to @rubin1980randomization), computing and interpreting causal effect estimates under this theory can be challenging.
 
 Consider the question of whether a reduction in Body Mass Index (BMI) affects health [@hernán2008]. Weight loss can occur through various methods, each with different health implications. Specific methods, such as regular exercise or a calorie-reduced diet, benefit health. However, weight loss might result from adverse conditions such as infectious diseases, cancers, depression, famine, or accidental amputations, which are generally not beneficial to health. Hence, even if causal effects of 'weight loss' could be consistently estimated when adjusting for covariates $L$, we might be uncertain about how to interpret the effect we are consistently estimating. This uncertainty highlights the need for precise and well-defined causal questions. For example, rather than stating the intervention vaguely as 'weight loss', we could state the intervention clearly and specifically as 'weight loss achieved through aerobic exercise over at least five years, compared with no weight loss.' This specificity in the definition of the treatment, along with comparable specificity in the statement of the outcomes, helps ensure that the causal estimates we obtain are not merely unbiased but also interpretable; for discussion, see @hernán2022; @murray2021a; @hernán2008.
 
@@ -118,6 +118,7 @@ For now, we note that the causal consistency assumption provides a theoretical s
 
 ::: {#refs}
 :::
+
 
 
 
