--- a/manuscripts/24-accepted-ehs/part-1-dags/s1-part-1-dags.tex
+++ b/manuscripts/24-accepted-ehs/part-1-dags/s1-part-1-dags.tex
@@ -381,9 +381,9 @@ K \coprod Y(k) | L
 According to the theory of causal inference under multiple versions of
 treatment, we may think of \(K\) as a `coarsened indicator' for \(A\).
 Although the theory of causal inference under multiple versions of
-treatment provides a formal solution to the problem of treatment-effect
-heterogeneity and treatment-effect dependencies (also known as SUTVA -
-the `stable unit treatment value assumption', refer to Rubin
+treatment provides a formal solution to the problems of treatment-effect
+heterogeneity and treatment-effect dependencies (also known as
+SUTVA---the `stable unit treatment value assumption'; refer to Rubin
 (\citeproc{ref-rubin1980randomization}{1980})), computing and
 interpreting causal effect estimates under this theory can be
 challenging.
