--- a/manuscripts/24-accepted-ehs/part-2-time-varying/part-2-time-varying.tex
+++ b/manuscripts/24-accepted-ehs/part-2-time-varying/part-2-time-varying.tex
@@ -570,8 +570,8 @@ pointing into \(A\) (a backdoor path). Formally, \(L\) must:
 
 If \(L\) satisfies these conditions, the causal effect of \(A\) on \(Y\)
 is identified by conditioning on
-\(\boxed{L}\)(\citeproc{ref-pearl2009a}{Pearl 2009}). Here, I will
-assume readers are familiar with causal directed acyclic graphs.
+\(\boxed{L}\)(\citeproc{ref-pearl2009a}{Pearl 2009}). In what follows, I
+will assume readers are familiar with causal directed acyclic graphs.
 Accessible introductions to causal directed acyclic graphs can be found
 in Pearl (\citeproc{ref-pearl2009a}{2009}); Barrett
 (\citeproc{ref-barrett2021}{2021}); McElreath
