--- a/manuscripts/24-accepted-ehs/part-3-measurement/part-3-measurement-validity.tex
+++ b/manuscripts/24-accepted-ehs/part-3-measurement/part-3-measurement-validity.tex
@@ -211,7 +211,7 @@ External Validity Threats}
       
 
 
-\date{2024-06-11}
+\date{2024-06-12}
 \begin{document}
 \maketitle
 \begin{abstract}
@@ -254,7 +254,7 @@ Unsurprisingly, WEIRD samples are over-represented in human science
 datasets (\citeproc{ref-arnett2008neglected}{Arnett 2008};
 \citeproc{ref-sears1986college}{Sears 1986}). Henrich et al.~illustrate
 how WEIRD samples differ from non-WEIRD samples in areas such as spatial
-cognition and perceptions of fairness while showing continuities in
+cognition and perceptions of fairness, while showing continuities in
 basic emotion recognition, positive self-views, and motivation to punish
 anti-social behaviour. Because science seeks generalisation wherever it
 can, Henrich et al.~urge that sampling from non-WEIRD populations is
@@ -322,8 +322,8 @@ question in terms of well-defined counterfactual quantities, state the
 population of interest, and evaluate assumptions under which it is
 possible to obtain valid quantitative estimates of the counterfactual
 quantities we seek from data. Application of these workflows to
-comparative questions enables us to clarify whether comparative research
-is possible, and also whether it is desirable. Not all questions are
+comparative questions enables us to clarify when comparative research is
+possible, and also whether it is desirable. Not all questions are
 causal, of course. However, because manifest associations in a dataset
 may not be evidence of \emph{association} in the world, even those who
 seek comparative descriptive understanding may benefit from causal
@@ -386,7 +386,7 @@ measurement problems. This approach better diagnoses threats to
 comparative human science and elucidates their remedies.
 
 The importance of causal inference for comparative research has been
-discussed in several recent studies
+highlighted in several recent studies
 (\citeproc{ref-bulbulia2022}{Bulbulia 2022};
 \citeproc{ref-deffner2022}{Deffner \emph{et al.} 2022}). Here, I focus
 on challenges arising from structural features of (1) measurement error
@@ -480,7 +480,7 @@ population from which the sample is drawn:
 \underbrace{\overbrace{\left[\mathbb{E}[Y(0) \mid A = 1]\right]}^{\textcolor{red}{\text{unobserved}}} = \overbrace{\left[\mathbb{E}[Y(0) \mid A = 0]\right]}^{\text{observed}}}_{\text{Under } A = 0}, \quad \underbrace{\overbrace{\left[\mathbb{E}[Y(1) \mid A = 1]\right]}^{\text{observed}} = \overbrace{\left[\mathbb{E}[Y(1) \mid A = 0]\right]}^{\textcolor{red}{\text{unobserved}}}}_{\text{Under } A = 1}
 \]
 
-Because treatment groups are exchangeable owing to randomisation, it
+Because treatment groups are exchangeable -- by randomisation, it
 follows that an ideally randomised controlled experiment provides an
 unbiased estimate of the Average Treatment Effect:
 
@@ -497,19 +497,9 @@ referencing its scale and population:
 difference scale, and \(S\) denotes the source population. I will return
 to this point in \hyperref[id-sec-2]{Part 2} and
 \hyperref[id-sec-3]{Part 3}, but it is important to build intuition
-early that in causal inference we must specify:
-
-\begin{enumerate}
-\def\labelenumi{\arabic{enumi}.}
-\tightlist
-\item
-  The causal effect of interest.
-\item
-  A scale of contrast.
-\item
-  A target population for whom a causal effect estimate is meant to
-  generalise.
-\end{enumerate}
+early that in causal inference we must specify: 1. The causal effect of
+interest. 2. A scale of contrast. 3. A target population for whom a
+causal effect estimate is meant to generalise.
 
 \subsubsection{Three Fundamental Assumptions For Causal
 Inference}\label{three-fundamental-assumptions-for-causal-inference}
@@ -548,9 +538,9 @@ where:
   indicating treatment received and \(A_i = 0\) indicating no treatment;
 \item
   \(Y_i(1)\) and \(Y_i(0)\) are the potential outcomes for individual
-  \(i\) under treatment and no treatment, respectively
-  (\citeproc{ref-morgan2014}{Morgan and Winship 2014};
-  \citeproc{ref-vanderweele2009}{VanderWeele 2009}).
+  \(i\) under treatment and no treatment, respectively (refer to Morgan
+  and Winship (\citeproc{ref-morgan2014}{2014}); VanderWeele
+  (\citeproc{ref-vanderweele2009}{2009})).
 \end{itemize}
 
 The causal consistency assumption is necessary to link the theoretical
@@ -761,7 +751,7 @@ To avoid confusion, we define the meanings of our terms:
   modifiers between the two populations. The closer the source
   population is to the target population, the more plausible the
   transportability assumptions and the less we need to rely on complex
-  adjustment methods (refer to supplementary materials \textbf{S2}).
+  adjustment methods see (Refer to supplementary materials \textbf{S2}).
 \item
   \textbf{Marginal effect}: Typically a synonym for the average
   treatment effect --- always relative to some population specified by
@@ -978,7 +968,7 @@ in a causal diagram that may lead to a non-causal treatment/outcome
 association.
 
 Table~\ref{tbl-terminologygeneral} presents our convention for
-indicating a relationship of effect modification in settings where (1)
+highlighting a relationship of effect modification in settings where (1)
 we assume no confounding of treatment and outcome and (2) there is
 effect modification such that the effect of \(A\) on \(Y\) differs in at
 least one stratum of the target population.
@@ -1080,13 +1070,14 @@ randomised, uncorrelated and undirected errors will generally not
 introduce bias \emph{under the sharp null of no treatment effect for any
 unit} when all backdoor paths are closed. However, if confounders are
 measured without error this may open a backdoor path from treatment to
-outcome. For example, (\citeproc{ref-robins2004effects}{Robins \emph{et
-al.} 2004 p. 2216}) discusses how in non-experimental settings,
-mismeasured confounders can introduce bias even when the measurement
-errors of the treatment and outcome are uncorrelated and undirected and
-there is no treatment effect. This is because mismeasured confounders
-will not control for confounding bias. We present an illustration of
-this bias in Table~\ref{tbl-terminologyselectionrestrictionbaseline}
+outcome. For example, Robins \emph{et al.}
+(\citeproc{ref-robins2004effects}{2004}) p.2216 discusses how in
+non-experimental settings, mismeasured confounders can introduce bias
+even when the measurement errors of the treatment and outcome are
+uncorrelated and undirected and there is no treatment effect. This is
+because mismeasured confounders will not control for confounding bias.
+We present an illustration of this bias in
+Table~\ref{tbl-terminologyselectionrestrictionbaseline}
 \(\mathcal{G}_6\), where we discuss challenges to comparative research
 in which the accuracy of confounder measurements varies across the sites
 to be compared.
@@ -1343,9 +1334,9 @@ The results obtained from this study risk distortation and as such
 invite \textbf{weirdness}: (\textbf{w}rongly \textbf{e}stimated
 inferences due to \textbf{i}nappropriate \textbf{r}estriction and
 \textbf{d}istortion). Here, distortion operates through the restriction
-of the target population at the the end of the study, assuming the
-analytic sample at the start of study represented that target population
-(or was weighted to represent it.)
+of the target population at the end of the study, assuming the analytic
+sample at the start of the study represented that target population (or
+was weighted to represent it.)
 
 \subsubsection{Example 3: No treatment effect when outcome causing
 censoring}\label{example-3-no-treatment-effect-when-outcome-causing-censoring}
@@ -1391,11 +1382,11 @@ confounding)}\label{example-5-treatment-effect-and-effect-modifiers-differ-in-ce
 Table~\ref{tbl-terminologycensoring} \(\mathcal{G}_5\) represents a
 setting in which there is a true treatment effect, but the distribution
 of effect-modifiers -- variables that interact with the treatment --
-differ among the sample at baseline and the sample at the end of study.
-Knowing nothing else, we might expect this setting to be standard. Where
-measured variables are sufficient to predict attrition, that is, where
-missingness is at random, we can obtain valid estimates for a treatment
-effect by inverse probability of treatment weighting
+differ among the sample at baseline and the sample at the end of the
+study. Knowing nothing else, we might expect this setting to be
+standard. Where measured variables are sufficient to predict attrition,
+that is, where missingness is at random, we can obtain valid estimates
+for a treatment effect by inverse probability of treatment weighting
 (\citeproc{ref-cole2008}{Cole and Hernán 2008};
 \citeproc{ref-leyrat2021}{Leyrat \emph{et al.} 2021}) or by multiple
 imputation -- on the assumption that our models are correctly specified
@@ -1444,7 +1435,7 @@ attrition cannot be checked it will make results \textbf{weird}:
 (\textbf{w}rongly \textbf{e}stimated inferences due to
 \textbf{i}nappropriate \textbf{r}estriction and \textbf{d}istortion).
 Refer to supplementary materials \textbf{S3} for a mathematical
-explanation for why effects differ when the distribution of effect
+explanation of why effects differ when the distribution of effect
 modifiers differs. Refer to supplementary materials \textbf{S4} for a
 data simulation that makes the same point.
 
@@ -1729,7 +1720,7 @@ association without causation.
 
 Suppose we plan a cross-cultural investigation to clarify the
 relationship between interventions on religious service attendance,
-\(A\), and charitable giving, \(Y\). They plan to obtain measures of
+\(A\), and charitable giving, \(Y\). We plan to obtain measures of
 covariates \(L\) sufficient to control for confounding. Suppose we
 observe religious attendance so that it is not measured with error (as
 did \citeproc{ref-shaver2021comparison}{Shaver \emph{et al.} 2021}), yet
@@ -1850,19 +1841,19 @@ of more than one intervention at a time). Single World Intervention
 Templates are functions that we may use to generate multiple Single
 World Intervention Graphs
 (\citeproc{ref-richardson2013swigsprimer}{Richardson and Robins 2013b}).
-Whether there we imagine a single-point or sequential series of
-interventions, one reads a SWIG just as one would read a causal DAG,
-ensuring there are no backdoor paths linking the random part of the node
-to the outcome. The deterministic part of a node is fixed, preventing
-confounding in the counterfactual future from the fixed portion of the
-node unless an open backdoor path arises before a subsequent
-intervention that links the subsequent intervention to the outcome in
-the absence of a causal effect. Again, although SWIGs, like causal DAGs,
-are built to evaluate identification (no unmeasured confounding) by
-factorising the conditional and marginal distributions associated with a
-graph, the explicit representation of counterfactual states makes it
-easier to understand how bias arises in the absence of confounding,
-without supposing action at distance.
+Whether we imagine a single-point or sequential series of interventions,
+one reads a SWIG just as one would read a causal DAG, ensuring there are
+no backdoor paths linking the random part of the node to the outcome.
+The deterministic part of a node is fixed, preventing confounding in the
+counterfactual future from the fixed portion of the node unless an open
+backdoor path arises before a subsequent intervention that links the
+subsequent intervention to the outcome in the absence of a causal
+effect. Again, although SWIGs, like causal DAGs, are built to evaluate
+identification (no unmeasured confounding) by factorising the
+conditional and marginal distributions associated with a graph, the
+explicit representation of counterfactual states makes it easier to
+understand how bias arises in the absence of confounding, without
+supposing action at distance.
 
 \begin{table}
 
@@ -2083,7 +2074,7 @@ However, a strict `null' effect cannot be assumed. Note that we do not
 use `null' here in the sense of null hypothesis significance testing,
 where there is no such thing as a `null' effect. Supplementary materials
 \textbf{S5} uses Single World Intervention Graphs to describe correlated
-and directed measurement error, and considers how bias correction may be
+and directed measurement error and consider how bias correction may be
 interpreted mechanistically as interventions on reporters.
 
 \subsubsection{Summary Part 4}\label{summary-part-4}
@@ -2138,8 +2129,8 @@ measurement error, or because there is effect modification of the
 unmeasured sources of measurement error on reporters of outcomes.
 Lacking structural assumptions, statistical tests will not detect these
 biases. However, it may be possible to correct for these biases, again
-under structural assumptions that we do not obtain from the data alone
-(see supplementary materials \textbf{S2} and \textbf{S5}).
+under structural assumptions that we do not obtain from the data alone,
+see supplementary materials \textbf{S2} and \textbf{S5}.
 
 Nothing I have said here should detract from the importance of seeking
 species-level knowledge. We should seek such knowledge. Science should
@@ -2275,7 +2266,7 @@ measure of effect.
 Provide transparent and thorough documentation of how steps 1-8 have
 been made. This includes detailing the assumptions, methods, and
 decisions. Prepare to conduct and report multiple analyses where
-analytic decisions are ambiguous.
+analystic decisions are ambiguous.
 
 We have seen that the demands of following this workflow in comparative
 research are more stringent because measurement error bias must be
