--- a/manuscripts/24-accepted-ehs/part-2-time-varying/part-2-time-varying.tex
+++ b/manuscripts/24-accepted-ehs/part-2-time-varying/part-2-time-varying.tex
@@ -211,7 +211,7 @@ Time-Varying Treatments}
       
 
 
-\date{2024-06-11}
+\date{2024-06-12}
 \begin{document}
 \maketitle
 \begin{abstract}
@@ -378,7 +378,7 @@ may not be satisfied in observational or `real world' data:
 
 Note that we speak of an `ideal' experiment because real-world
 experiments may fail these assumptions
-(\citeproc{ref-bulbulia_2024_experiments}{Bulbulia 2024b};
+(\citeproc{ref-bulbulia_2024_experiments}{Bulbulia 2024c};
 \citeproc{ref-hernan2017per}{Hernán \emph{et al.} 2017}). Our interest
 here is restricted to observational or `real world' data.
 
@@ -424,7 +424,7 @@ the question may be identified from the data.
   Investigators may also seek to generalise beyond the source
   population, which requires additional assumptions and may require
   additional knowledge (\citeproc{ref-bareinboim2013general}{Bareinboim
-  and Pearl 2013}; \citeproc{ref-bulbulia2024wierd}{Bulbulia 2024c};
+  and Pearl 2013}; \citeproc{ref-bulbulia2024wierd}{Bulbulia 2024b};
   \citeproc{ref-dahabreh2019}{Dahabreh and Hernán 2019};
   \citeproc{ref-deffner2022}{Deffner \emph{et al.} 2022};
   \citeproc{ref-westreich2017transportability}{Westreich \emph{et al.}
@@ -454,7 +454,7 @@ the question may be identified from the data.
 \item
   \textbf{Ensure that the measures relate to the scientific questions at
   hand.} And in particular, evaluate structural features of measurement
-  error bias (\citeproc{ref-bulbulia2024wierd}{Bulbulia 2024c};
+  error bias (\citeproc{ref-bulbulia2024wierd}{Bulbulia 2024b};
   \citeproc{ref-hernan2024WHATIF}{Hernan and Robins 2024}).
 \item
   \textbf{Consider strategies to ensure the study group measured at the
@@ -464,7 +464,7 @@ the question may be identified from the data.
   treatment, the study will be biased when there is a treatment effect;
   as such, investigators must develop strategies to address attrition,
   non-response, and structural sources of bias from measurement error
-  (\citeproc{ref-bulbulia2024wierd}{Bulbulia 2024c}).
+  (\citeproc{ref-bulbulia2024wierd}{Bulbulia 2024b}).
 \item
   \textbf{Clearly communicate the reasoning, evidence, and
   decision-making that inform steps 1-8.} Provide transparent and
@@ -637,7 +637,7 @@ First, we define the `sharp-null hypothesis' as the supposition that
 there is no effect of the exposure on the outcome for any unit in the
 target population. Unless the sharp-null hypothesis is false, there may
 be effect modification (Bulbulia
-(\citeproc{ref-bulbulia2024wierd}{2024c})). The variability of
+(\citeproc{ref-bulbulia2024wierd}{2024b})). The variability of
 individual units cannot be directly evaluated: recall each unit may
 receive only one treatment. However, the variability within groups of
 units may be quantified and compared. For any study worth conducting, we
@@ -711,11 +711,11 @@ the effect marginalises. This point, although obvious, has profound
 implications when investigators seek to assess whether their research
 generalises; refer to Hernan and Robins
 (\citeproc{ref-hernan2024WHATIF}{2024}), Bulbulia
-(\citeproc{ref-bulbulia2024wierd}{2024c}). For example, if the study
+(\citeproc{ref-bulbulia2024wierd}{2024b}). For example, if the study
 population differs in the distribution of features that modify a
 treatment effect, and no correction is applied, effect estimates will be
 biased for the target population in at least one measure of effect
-(\citeproc{ref-bulbulia2024wierd}{Bulbulia 2024c};
+(\citeproc{ref-bulbulia2024wierd}{Bulbulia 2024b};
 \citeproc{ref-greenland2009commentary}{Greenland 2009};
 \citeproc{ref-lash2020}{Lash \emph{et al.} 2020})
 
@@ -2058,14 +2058,14 @@ diagrams and confounding. \emph{Evolutionary Human Sciences},
 \textbf{6}.
 
 \bibitem[\citeproctext]{ref-bulbulia2024wierd}
-Bulbulia, JosephA (2024c) Methods in causal inference part 3:
+Bulbulia, JosephA (2024b) Methods in causal inference part 3:
 Measurement error and external validity threats. \emph{Evolutionary
 Human Sciences}, \textbf{6}.
 
 \bibitem[\citeproctext]{ref-bulbulia_2024_experiments}
-Bulbulia, JosephA (2024b) Methods in causal inference part 3:
-Measurement error and external validity threats. \emph{Evolutionary
-Human Sciences}, \textbf{6}.
+Bulbulia, JosephA (2024c) Methods in causal inference part 4:
+Confounding in experiments. \emph{Evolutionary Human Sciences},
+\textbf{6}.
 
 \bibitem[\citeproctext]{ref-chatton2020}
 Chatton, A, Le Borgne, F, Leyrat, C, \ldots{} Foucher, Y (2020)
