--- a/manuscripts/24-accepted-ehs/part-4-experiments/part-4-experiments.qmd
+++ b/manuscripts/24-accepted-ehs/part-4-experiments/part-4-experiments.qmd
@@ -1,5 +1,5 @@
 ---
-title: 'Methods in Causal Inference Part 4: Confounding in Experiments'
+title: 'Methods for Causal Inference Part 4: Confounding in Experiments'
 abstract: |
   Confounding bias arises when a treatment and outcome share a common cause. In randomised controlled experiments (trials), treatment assignment is random, ostensibly eliminating confounding bias. Here, we use causal directed acyclic graphs (causal DAGs) to unveil eight structural sources of bias that nevertheless persist in these trials. This analysis highlights the crucial role of causal inference methods in the design and analysis of experiments, ensuring the validity of conclusions drawn from experimental data.
   
@@ -283,7 +283,7 @@ Setting aside self-inflicted injuries of post-treatment conditioning and directe
 
 @tbl-terminologyelconfoundersexperiments $\mathcal{G}_{8}$ illustrates the threat for identifying the per-protocol effect in sustained treatments with measured and unmeasured confounders. Suppose flexibility affects adherence, yoga affects flexibility, and an unmeasured variable, such as prejudice toward Eastern spiritual practices, affects adherence. We have no measures for this variable. There is unmeasured confounding.
 
-If there were no effect of yoga on well-being except through flexibility, and furthermore if flexibility were not affected by the unmeasured antipathy toward Eastern spiritual practices, and further, if the effect of flexibility on yoga at each time point were conditionally independent of all future counterfactual data, both for the treatments and the outcomes, then it might be possible to construct special estimators that identify the per-protocol effect of yoga on well-being in the presence of unmeasured confounding that affects adherence (refer to @hernan2017per). These special estimators are quite different from the ANOVAs, regressions models, and multi-level regression models routinely deployed in experimental studies. However, if we seek to understand the effect of yoga on well-being and not the effect of random assignment to yoga on well-being the routine estimators will not work: we require special estimators [@hernan2024stating; @hoffman2023; @diaz2023lmtp].
+If there were no effect of yoga on well-being except through flexibility, and furthermore if flexibility were not affected by the unmeasured antipathy toward Eastern spiritual practices, and further, if the effect of flexibility on yoga at each time point were conditionally independent of all future counterfactual data, both for the treatments and the outcomes, then it might be possible to construct special estimators that identify the per-protocol effect of yoga on well-being in the presence of unmeasured confounding that affects adherence (refer to @hernan2017per). These special estimators are quite different from the ANOVAs, regressions models, and multi-level regression models routinely deployed in experimental studies. However, if we seek to understand the effect of yoga on well-being and not the effect of random assignment to yoga on well-being the routine estimators will not work: we require special estimators [@hernan2024WHATIF; @hoffman2023; @diaz2023lmtp].
 
 ## Conclusions
 
