--- a/manuscripts/24-accepted-ehs/part-4-experiments/part-4-experiments.tex
+++ b/manuscripts/24-accepted-ehs/part-4-experiments/part-4-experiments.tex
@@ -188,7 +188,7 @@
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \urlstyle{same} % disable monospaced font for URLs
 \hypersetup{
-  pdftitle={Commentary: Confounding in Experiments},
+  pdftitle={Methods for Causal Inference Part 4: Confounding in Experiments},
   pdfauthor={Joseph A. Bulbulia},
   colorlinks=true,
   linkcolor={blue},
@@ -197,7 +197,7 @@
   urlcolor={Blue},
   pdfcreator={LaTeX via pandoc}}
 
-\title{Commentary: Confounding in Experiments}
+\title{Methods for Causal Inference Part 4: Confounding in Experiments}
 
 \usepackage{academicons}
 \usepackage{xcolor}
@@ -210,7 +210,7 @@
       
 
 
-\date{2024-06-11}
+\date{2024-06-12}
 \begin{document}
 \maketitle
 \begin{abstract}
@@ -261,8 +261,8 @@ data analysis, and inference, demonstrating the utility of causal
 inference methods for diagnosing and addressing vulnerabilities in
 randomised experimental designs.
 
-We begin by defining our terms. \hyperref[id-app-a]{Appendix A} provides
-a glossary of terms in causal inference.
+We begin by defining our terms. Supplementary materials \textbf{S1}
+provides a glossary of general terms used in causal inference.
 
 \subsubsection{Terminology}\label{terminology}
 
@@ -674,7 +674,7 @@ experimental studies. However, if we seek to understand the effect of
 yoga on well-being and not the effect of random assignment to yoga on
 well-being the routine estimators will not work: we require special
 estimators (\citeproc{ref-diaz2023lmtp}{Díaz \emph{et al.} 2023};
-\citeproc{ref-hernan2024stating}{Hernán and Greenland 2024};
+\citeproc{ref-hernan2024WHATIF}{Hernan and Robins 2024};
 \citeproc{ref-hoffman2023}{Hoffman \emph{et al.} 2023}).
 
 \subsection{Conclusions}\label{conclusions}
@@ -770,14 +770,25 @@ From these observations, we offer the following practical advice:
   intention-to-treat effect.
 \end{enumerate}
 
-It is beyond the scope of this commentary to describe the special
-methods for estimating per-protocol effects with multiple sequential
-treatments. Our task has been to demonstrate that satisfying the
-assumptions for valid causal inferences in experiments is typically more
-challenging than many experimental human scientists presently understand
-(refer to \citeproc{ref-montgomery2018}{Montgomery \emph{et al.} 2018}).
-Methods for causal inference have a wide scope for improving the design,
-analysis, and interpretation of experimental research.
+In a separate work, I considered bias arising from attrition in the
+absence of confounding when treatment assignment is randomised
+(\citeproc{ref-bulbulia2024wierd}{Bulbulia 2024b}). Describing the
+special methods for estimating per-protocol effects with multiple
+sequential treatments is beyond the scope of this commentary
+(\citeproc{ref-hernan2024WHATIF}{Hernan and Robins 2024}). My aim has
+been to demonstrate that satisfying the assumptions for valid causal
+inferences in experiments is often more challenging than many
+experimental human scientists currently realize (refer to
+\citeproc{ref-montgomery2018}{Montgomery \emph{et al.} 2018}).
+
+For example, I was part of an international team that administered
+questionnaires about religious identification following randomisation in
+a cross-cultural study investigating the source-credibility of religious
+and scientific authority (\citeproc{ref-hoogeveen2022einstein}{Hoogeveen
+\emph{et al.} 2022}). This approach might have attenuated effect
+modification by religiosity. Causal inference methods have significant
+potential to enhance the design, analysis, and interpretation of
+experimental research, including my own work.
 
 \newpage{}
 
@@ -796,15 +807,14 @@ decision to publish it.
 \phantomsection\label{refs}
 \begin{CSLReferences}{1}{0}
 \bibitem[\citeproctext]{ref-bulbulia2024swigstime}
-Bulbulia, J (2024a) Causal inference: Interaction, mediation, and
-time-varying treatments. \emph{PsyArXiv}.
-doi:\href{https://doi.org/10.31234/osf.io/vr268}{10.31234/osf.io/vr268}.
+Bulbulia, JosephA (2024a) Methods in causal inference part 2:
+Interaction, mediation, and time-varying treatments. \emph{Evolutionary
+Human Sciences}, \textbf{6}.
 
 \bibitem[\citeproctext]{ref-bulbulia2024wierd}
-Bulbulia, J (2024b) The weirdest causal inferences: Why comparative
-cultural research requires a causal understanding of measurement error
-bias. \emph{PsyArXiv}.
-doi:\href{https://doi.org/10.31234/osf.io/kj7rv}{10.31234/osf.io/kj7rv}.
+Bulbulia, JosephA (2024b) Methods in causal inference part 3:
+Measurement error and external validity threats. \emph{Evolutionary
+Human Sciences}, \textbf{6}.
 
 \bibitem[\citeproctext]{ref-cole2010}
 Cole, SR, Platt, RW, Schisterman, EF, \ldots{} Poole, C (2010)
@@ -835,10 +845,6 @@ research. \emph{Journal of Epidemiology \& Community Health},
 \textbf{58}(4), 265--271.
 doi:\href{https://doi.org/10.1136/jech.2002.006361}{10.1136/jech.2002.006361}.
 
-\bibitem[\citeproctext]{ref-hernan2024stating}
-Hernán, MA, and Greenland, S (2024) Why stating hypotheses in grant
-applications is unnecessary. \emph{JAMA}, \textbf{331}(4), 285--286.
-
 \bibitem[\citeproctext]{ref-hernan2017per}
 Hernán, MA, Robins, JM, et al. (2017) Per-protocol analyses of pragmatic
 trials. \emph{N Engl J Med}, \textbf{377}(14), 1391--1398.
@@ -848,6 +854,12 @@ Hoffman, KL, Salazar-Barreto, D, Rudolph, KE, and Díaz, I (2023)
 Introducing longitudinal modified treatment policies: A unified
 framework for studying complex exposures.
 doi:\href{https://doi.org/10.48550/arXiv.2304.09460}{10.48550/arXiv.2304.09460}.
+
+\bibitem[\citeproctext]{ref-hoogeveen2022einstein}
+Hoogeveen, S, Haaf, JM, Bulbulia, JA, et al.others (2022) The einstein
+effect provides global evidence for scientific source credibility
+effects and the influence of religiosity. \emph{Nature Human Behaviour},
+\textbf{6}(4), 523--535.
 
 \bibitem[\citeproctext]{ref-lash2009applying}
 Lash, TL, Fox, MP, and Fink, AK (2009) \emph{Applying quantitative bias
@@ -920,22 +932,6 @@ value of treatment using observational data. \emph{Epidemiologic
 Methods}, \textbf{3}(1), 1--19.
 
 \end{CSLReferences}
-
-\newpage{}
-
-\subsection{Appendix A: Glossary}\label{id-app-a}
-
-\begin{table}
-
-\caption{\label{tbl-experiments}Glossary}
-
-\centering{
-
-\glossaryTerms
-
-}
-
-\end{table}%
 
 
 
